[package]
name = "frbf"
version = "0.1.0"
edition = "2021"
description = "A simple, robust, and efficient implementation of the Bloom Filter data structure in Rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
ahash = "0.8.3"
